[gd_scene load_steps=14 format=3 uid="uid://cnfahjhvwxeo2"]

[ext_resource type="Script" path="res://scenes/day_01/_shared/ui/day_01_ui.gd" id="1_vfhqe"]
[ext_resource type="Texture2D" uid="uid://cwjesgpu3jr21" path="res://art/_shared/ui_counter_lives.png" id="2_dhqsk"]
[ext_resource type="FontFile" uid="uid://d3eorbmbvko6w" path="res://art/fonts/Courier_Prime/CourierPrime-Bold.ttf" id="3_88su3"]
[ext_resource type="Texture2D" uid="uid://085ky11hend8" path="res://art/_shared/ui_counter_cat_food.png" id="4_4e12d"]
[ext_resource type="Texture2D" uid="uid://b1ldw26sv5ng" path="res://art/_shared/ui_counter_time.png" id="5_tkprg"]
[ext_resource type="PackedScene" uid="uid://b0itsp3jm2p1k" path="res://scenes/_shared/ui/pause_menu.tscn" id="6_t8w1h"]
[ext_resource type="PackedScene" uid="uid://c4nnvy7hmhkml" path="res://scenes/_shared/ui/timed_label.tscn" id="7_4gefh"]
[ext_resource type="Theme" uid="uid://y72soc2heqau" path="res://themes/theme.tres" id="7_ak67o"]
[ext_resource type="PackedScene" uid="uid://dxxd4wyd36xa6" path="res://scenes/_shared/ui/two_line_timed_label.tscn" id="7_t8tk8"]
[ext_resource type="FontFile" uid="uid://lfmnhv4dh4tm" path="res://art/fonts/Courier_Prime/CourierPrime-BoldItalic.ttf" id="8_lotg1"]
[ext_resource type="PackedScene" uid="uid://cjldxfd1a76li" path="res://scenes/_shared/dialogue_box.tscn" id="11_l1dor"]

[sub_resource type="CanvasTexture" id="CanvasTexture_4x7ob"]

[sub_resource type="CanvasTexture" id="CanvasTexture_77l20"]

[node name="Day01Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vfhqe")

[node name="LivesCounter" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_top = -2.0
offset_bottom = 20.0
grow_horizontal = 0
size_flags_horizontal = 0

[node name="Icon" type="TextureRect" parent="LivesCounter"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_dhqsk")
stretch_mode = 4

[node name="Label" type="Label" parent="LivesCounter"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88su3")
theme_override_font_sizes/font_size = 16
text = "9"
vertical_alignment = 2
max_lines_visible = 1

[node name="TreatsCounter" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 22.0

[node name="Icon" type="TextureRect" parent="TreatsCounter"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_4e12d")
stretch_mode = 4

[node name="Label" type="Label" parent="TreatsCounter"]
layout_mode = 2
text = "99"
vertical_alignment = 1
max_lines_visible = 1

[node name="StaminaBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 5.0
offset_right = 33.0
offset_bottom = 15.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="Icon" type="TextureRect" parent="StaminaBar"]
layout_mode = 2
texture = ExtResource("5_tkprg")

[node name="ProgressBar" type="TextureProgressBar" parent="StaminaBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 6)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 3.0
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
texture_under = SubResource("CanvasTexture_4x7ob")
texture_progress = SubResource("CanvasTexture_77l20")
tint_under = Color(0.180392, 0.180392, 0.180392, 1)
tint_progress = Color(0.729412, 0.431373, 0.431373, 1)

[node name="InvertedControlsSign" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 2.0
offset_right = -25.0
offset_bottom = 17.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Mareado"
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -4.0
offset_bottom = 22.0
grow_horizontal = 2
text = "Hi 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartLabels" parent="." instance=ExtResource("7_t8tk8")]
layout_mode = 1
text_1 = "Buffet"
text_2 = "¡Buen provecho!"
font_color_normal = Color(0.945098, 0.188235, 0.188235, 1)
font_color_fade = Color(0.94902, 0.505882, 0.505882, 1)
duration_sec = 1.6
label_2_visible_delay_sec = 0.8
preview_labels = false

[node name="GameOver" parent="." instance=ExtResource("7_4gefh")]
visible = false
layout_mode = 1
theme = ExtResource("7_ak67o")
theme_override_colors/font_color = Color(0.945098, 0.188235, 0.188235, 1)
theme_override_fonts/font = ExtResource("8_lotg1")
theme_override_font_sizes/font_size = 18
text = "Game over"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
_duration_sec = 3.0

[node name="PieceOfCake" parent="." instance=ExtResource("7_4gefh")]
visible = false
layout_mode = 1
theme = ExtResource("7_ak67o")
theme_override_colors/font_color = Color(0.945098, 0.188235, 0.188235, 1)
theme_override_fonts/font = ExtResource("8_lotg1")
theme_override_font_sizes/font_size = 18
text = "¡Pan comido!"
horizontal_alignment = 1
vertical_alignment = 1
_duration_sec = 2.0

[node name="TimeOut" parent="." instance=ExtResource("7_4gefh")]
visible = false
layout_mode = 1
theme = ExtResource("7_ak67o")
theme_override_colors/font_color = Color(0.945098, 0.188235, 0.188235, 1)
theme_override_fonts/font = ExtResource("8_lotg1")
theme_override_font_sizes/font_size = 18
text = "¡Tiempo agotado!"
horizontal_alignment = 1
vertical_alignment = 1
_duration_sec = 2.0

[node name="DialogueBox" parent="." instance=ExtResource("11_l1dor")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_bottom = 0.0
grow_vertical = 0

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="." instance=ExtResource("6_t8w1h")]
process_mode = 3
visible = false
layout_mode = 1
show_auto_fire = false

[connection signal="finished" from="StartLabels" to="." method="_on_start_label_timed_label_finished"]
